# STBtesterCLI

./: .gitignore  .mcp.json.example  CLAUDE.md  MCP_USAGE_GUIDE.md  README.md  STB_TESTER_PRD.md  TEST_SPECS.md  stb-tester-ai  stb_cli.py  stb_screenshot.py  stbt.conf  test_navigate_to_drama.py
mcp_server/: README.md  __init__.py  claude_desktop_config.json  pyproject.toml  stb_tester_server.py
reference_images/: README.md
stb-tester-test-pack-ziggo-main/: .gitignore  .pylintrc  README.md
stb-tester-test-pack-ziggo-main/config/: stbt.conf
stb-tester-test-pack-ziggo-main/config/remote-control/: ziggo.lircd.conf
stb-tester-test-pack-ziggo-main/config/test-farm/: stb-tester-48b02d5b0ab7.conf  stb-tester-48b02d5b11be.conf  stb-tester-48b02d5b18d4.conf  stb-tester-48b02d5b214d.conf
stb-tester-test-pack-ziggo-main/tests/: apps_youtube_test.py  eos_sanity.py  eos_sanity_SoftwareCheck  eos_sanity_SoftwareCheck.py  helper.py  kids_section_testcases.py  kpi_helpers.py  live_tv_testcases.py  remote_control.py  tutorial.py  tv_guide_testcases.py
stb-tester-test-pack-ziggo-main/tests/stbt_nursery/: control_soak.py  playback.py
stb-tester-test-pack-ziggo-main/tests/ziggo/pages/apps/: apps.py
stb-tester-test-pack-ziggo-main/tests/ziggo/pages/audio/: audio.py
stb-tester-test-pack-ziggo-main/tests/ziggo/pages/button/: button.py
stb-tester-test-pack-ziggo-main/tests/ziggo/pages/carousel/: carousel.py
stb-tester-test-pack-ziggo-main/tests/ziggo/pages/guide/: __init__.py  guide.py
stb-tester-test-pack-ziggo-main/tests/ziggo/pages/menu/: menu.py
stb-tester-test-pack-ziggo-main/tests/ziggo/pages/menutest/: __init__.py  menutest.py
stb-tester-test-pack-ziggo-main/tests/ziggo/pages/moviesandseries/: __init__.py  moviesandseries.py
stb-tester-test-pack-ziggo-main/tests/ziggo/pages/playback/: __init__.py  playback.py
stb-tester-test-pack-ziggo-main/tests/ziggo/pages/profile/: profile.py
stb-tester-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
stb-tester-ui/src/: App.tsx  index.css
stb-tester-ui/src/api/: stbTester.ts
stb-tester-ui/src/types/: index.ts
stb_tester_cli/: README.md  __init__.py  __main__.py  cli.py  pyproject.toml
stb_tester_ui/static/: index.html
stb_tests/: conftest.py  test_example.py  test_kids_section.py  test_movie_playback.py  test_sports_football.py  test_sports_football_dry_run.py  test_ziggo_menu_navigation.py
(+4 files in other folders)
