[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stb-tester-mcp"
version = "0.1.0"
description = "MCP Server for STB Tester APIs - control set-top boxes via Model Context Protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "STB Tester", email = "support@stb-tester.com"}
]
keywords = ["mcp", "stb-tester", "testing", "automation", "set-top-box"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
stbt = [
    "stb-tester",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
stb-tester-mcp = "stb_tester_server:main"

[project.urls]
Homepage = "https://github.com/stb-tester/stb-tester"
Documentation = "https://stb-tester.com/manual/"

[tool.setuptools]
py-modules = ["stb_tester_server"]
