[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stb-tester-ai-cli"
version = "0.1.0"
description = "AI-Powered CLI for STB Tester using Claude Agent SDK"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "STB Tester Team"}
]
keywords = ["stb-tester", "set-top-box", "testing", "ai", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "isort",
]

[project.scripts]
stb-tester-ai = "stb_tester_cli:main"

[project.urls]
Homepage = "https://github.com/SohniSwatantra/STBtesterCLI"

[tool.setuptools.packages.find]
where = ["."]
